--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "class-26-solution",
+  "homepage": "https://BianQt.github.io/RESTy",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
@@ -13,14 +14,17 @@
     "react-dom": "17.0.2",
     "react-jsonschema-form": "1.8.1",
     "react-router-dom": "5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "gh-pages": "^3.2.3"
   },
   "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
